commit before reload

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     
     <div class = "wrapper">
         
-        <div class="keyboard clearfix">
+        <!-- <h1>Perfect Pitch</h1> -->
+        <div class="keyboard wrapper">
             <div class="white">
                     <div class="key key-white" id="C" data-index=0></div>
                     <div class="key key-white" id="D" data-index=2></div>
@@ -35,23 +36,7 @@
             <button class="practice">
                 practice
             </button>
-            <!-- <input type="button" id="randomNote" value="random"> -->
         </div>
-        <!-- <section class="submit-buttons">
-                <input type="text" value="submit answer">
-            <input type="submit" value"C">
-            <input type="submit" value"">
-            <input type="submit" value"">
-            <input type="submit" value"">
-            <input type="submit" value"">
-            <input type="submit" value"">
-            <input type="submit" value"">
-            <input type="submit" value"">
-            <input type="submit" value"">
-            <input type="submit" value"">
-            <input type="submit" value"">
-            <input type="submit" value"">
-        </section> -->
     </div>
 
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
