changed timeout function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Perfect Pitch</h1>
     <div class="keyboard wrapper">
         <div class="white">
-            <div class="key key-white" id="C" data-index=0>
+            <div class="key key-white" data-key="65" id="C" data-index=0>
                 <p>C</p>
             </div>
             <div class="key key-white" id="D" data-index=2>
@@ -73,6 +73,9 @@
                 </div>
         </div>
     </div>
+
+   <audio data-key="65" src="audiosamples/C.mp3"></audio>
+    
             
     <div class="buttons">
         <button class="practice">practice</button>
